syntax = "proto3";

package mskit.api;

option go_package="github.com/fidelfly/fxms/mskit/proto/api";

message IdResponse {
	int64 id = 1;
}

message UpdateInfo {
	int64 id = 1;
	repeated string cols = 2;
}
