syntax = "proto3";

package com.fxms.srv.user;
option go_package="github.com/fidelfly/fxms/srv/proto/user";

import "google/protobuf/timestamp.proto";
import "mspkg/proto/api/api.proto";

service User {
	rpc Call(Request) returns (Response) {}
	rpc Stream(StreamingRequest) returns (stream StreamingResponse) {}
	rpc PingPong(stream Ping) returns (stream Pong) {}

	rpc Create(UserData) returns (mspkg.api.IdResponse) {}
	rpc Update(UpdateRequest) returns (mspkg.api.IdResponse) {}
	rpc Read(mspkg.api.IdResponse) returns (UserData) {}
	rpc Delete(mspkg.api.IdResponse) returns (mspkg.api.IdResponse) {}

	rpc Validate(ValidateRequest) returns (UserData) {}
}

message ValidateRequest {
	string code = 1;
	string email = 2;
	string password = 3;
}

/*message CreateRequest {
	UserData data = 2;
}*/

message UpdateRequest {
	mspkg.api.UpdateInfo limit = 1;
	UserData data = 2;
}

message UserData {
	int64 id = 1;
	string code = 2;
	string name = 3;
	string email = 4;
	string password = 5;
	int64 avatar = 6;
	google.protobuf.Timestamp create_time = 7;
	google.protobuf.Timestamp update_time = 8;
}

message Message {
	string say = 1;
}

message Request {
	string name = 1;
}

message Response {
	string msg = 1;
}

message StreamingRequest {
	int64 count = 1;
}

message StreamingResponse {
	int64 count = 1;
}

message Ping {
	int64 stroke = 1;
}

message Pong {
	int64 stroke = 1;
}
